--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "api-builder",
+  "name": "@feprisa/api-builder",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/types/index.d.ts",
+  "module": "./dist/es/index.js",
   "bin": {
     "api-builder": "./dist/cjs/cli.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build:cjs": "tsc -p tsconfig.json",
     "build:es": "tsc -p tsconfig.es.json",
