eslint and change npm to yarn

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,1 @@
-{
-  "singleQuote": true,
-  "parser": "typescript",
-  "tabWidth": 2,
-  "semi": true,
-  "trailingComma": "es5"
-}
+"@feprisa/prettier-config-base"
