--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dist"
   ],
   "scripts": {
+    "cp:templates:cjs": "cp -r src/templates dist/cjs/templates",
+    "cp:templates:es": "cp -r src/templates dist/es/templates",
     "build:cjs": "tsc -p tsconfig.json",
     "build:es": "tsc -p tsconfig.es.json",
     "clean": "rm -rf dist",
-    "build": "yarn run clean && yarn run build:cjs && yarn run build:es",
+    "build": "yarn run clean && yarn run build:cjs && yarn run build:es && yarn run cp:templates:cjs && yarn run cp:templates:es",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --fix --ext .ts"
   },
@@ -30,16 +32,20 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.15.0",
     "@feprisa/errno": "^2.2.0",
+    "@types/ejs": "^3.1.0",
     "archiver": "^5.3.0",
     "babel-loader": "^8.2.2",
     "bluebird": "^3.7.2",
+    "ejs": "^3.1.6",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "memfs": "^3.2.2",
     "minimist": "^1.2.5",
     "terraform-generator": "^5.0.2",
     "tslib": "^2.3.1",
-    "webpack": "^5.51.1"
+    "unionfs": "^4.4.0",
+    "webpack": "^5.51.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@feprisa/eslint-config-base": "^1.2.0",
@@ -50,6 +56,7 @@
     "@types/lodash": "^4.14.172",
     "@types/minimist": "^1.2.2",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-node-externals": "^2.5.2",
     "eslint": "^7.32.0",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
