--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "incremental": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "declarationDir": "./dist/types",
     "outDir": "dist/cjs",
     "types": ["node"]
