--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "archiver": "^5.3.0",
     "babel-loader": "^8.2.2",
     "bluebird": "^3.7.2",
+    "dependency-tree": "^8.1.1",
     "ejs": "^3.1.6",
+    "enhanced-resolve": "^5.8.3",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "memfs": "^3.2.2",
@@ -52,6 +54,7 @@
     "@feprisa/prettier-config-base": "^1.1.0",
     "@types/archiver": "^5.1.1",
     "@types/bluebird": "^3.5.36",
+    "@types/dependency-tree": "^8.1.1",
     "@types/fs-extra": "^9.0.12",
     "@types/lodash": "^4.14.172",
     "@types/minimist": "^1.2.2",
