--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "dependency-tree": "^8.1.1",
     "ejs": "^3.1.6",
     "enhanced-resolve": "^5.8.3",
+    "express": "^4.17.1",
+    "express-openapi": "^9.3.0",
     "fs-extra": "^10.0.0",
+    "fs-monkey": "^1.0.3",
     "lodash": "^4.17.21",
     "memfs": "^3.2.2",
     "minimist": "^1.2.5",
@@ -54,7 +57,10 @@
     "@feprisa/prettier-config-base": "^1.1.0",
     "@types/archiver": "^5.1.1",
     "@types/bluebird": "^3.5.36",
+    "@types/body-parser": "^1.19.1",
     "@types/dependency-tree": "^8.1.1",
+    "@types/express": "^4.17.13",
+    "@types/express-openapi": "^1.9.0",
     "@types/fs-extra": "^9.0.12",
     "@types/lodash": "^4.14.172",
     "@types/minimist": "^1.2.2",
@@ -62,6 +68,7 @@
     "@types/webpack-node-externals": "^2.5.2",
     "eslint": "^7.32.0",
     "prettier": "^2.3.2",
+    "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   }
 }
