--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "archiver": "^5.3.0",
     "babel-loader": "^8.2.2",
     "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
     "dependency-tree": "^8.1.1",
     "ejs": "^3.1.6",
     "enhanced-resolve": "^5.8.3",
@@ -47,9 +48,11 @@
     "memfs": "^3.2.2",
     "minimist": "^1.2.5",
     "terraform-generator": "^5.0.2",
+    "ts-loader": "^9.2.6",
     "tslib": "^2.3.1",
     "unionfs": "^4.4.0",
-    "webpack": "^5.51.1"
+    "webpack": "^5.51.1",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
     "@feprisa/eslint-config-base": "^1.2.0",
@@ -67,7 +70,6 @@
     "@types/webpack-node-externals": "^2.5.2",
     "eslint": "^7.32.0",
     "prettier": "^2.3.2",
-    "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   }
 }
