--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@feprisa/api-builder",
-  "version": "2.9.0",
+  "version": "2.10.0",
   "description": "",
   "main": "./dist/cjs/index.js",
   "types": "./dist/types/index.d.ts",
@@ -49,10 +49,10 @@
     "minimist": "^1.2.5",
     "terraform-generator": "^5.0.2",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
     "unionfs": "^4.4.0",
-    "webpack": "^5.51.1",
-    "ts-node": "^10.2.1"
+    "webpack": "^5.51.1"
   },
   "devDependencies": {
     "@feprisa/eslint-config-base": "^1.2.0",
