--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "terraform-generator": "^5.0.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
+    "ts-node-dev": "^1.1.8",
     "tslib": "^2.3.1",
     "unionfs": "^4.4.0",
     "webpack": "^5.51.1"
