--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,7 @@
-"@feprisa/prettier-config-base"
+{
+  "singleQuote": true,
+  "parser": "typescript",
+  "tabWidth": 2,
+  "semi": true,
+  "trailingComma": "es5"
+}
