--- a/package.json
+++ b/package.json
@@ -67,6 +67,14 @@
     "@types/minimist": "^1.2.2",
     "@types/webpack": "^5.28.0",
     "@types/webpack-node-externals": "^2.5.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^13.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint": "^7.32.0",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
