--- a/package.json
+++ b/package.json
@@ -1,82 +1,33 @@
 {
-  "name": "@feprisa/api-builder",
-  "version": "2.17.0",
-  "description": "",
-  "main": "./dist/cjs/index.js",
-  "types": "./dist/types/index.d.ts",
-  "module": "./dist/es/index.js",
-  "bin": {
-    "api-builder": "./dist/cjs/cli.js"
-  },
+  "name": "root",
+  "version": "0.0.0",
+  "private": true,
   "files": [
     "dist"
   ],
   "scripts": {
-    "cp:templates:cjs": "cp -r src/templates dist/cjs/templates",
-    "cp:templates:es": "cp -r src/templates dist/es/templates",
-    "build:cjs": "tsc -p tsconfig.json",
-    "build:es": "tsc -p tsconfig.es.json",
-    "clean": "rm -rf dist",
-    "build": "yarn run clean && yarn run build:cjs && yarn run build:es && yarn run cp:templates:cjs && yarn run cp:templates:es",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --fix --ext .ts"
+    "postinstall": "lerna bootstrap"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com//Feprisa/api-builder.git"
+    "url": "https://github.com/germanamz/api-builder.git"
   },
-  "keywords": [],
-  "author": "Feprisa <tech@feprisa.com>",
-  "license": "Unlicense",
-  "dependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
-    "@types/ejs": "^3.1.0",
-    "archiver": "^5.3.0",
-    "babel-loader": "^8.2.2",
-    "bluebird": "^3.7.2",
-    "body-parser": "^1.19.0",
-    "dependency-tree": "^8.1.1",
-    "ejs": "^3.1.6",
-    "enhanced-resolve": "^5.8.3",
-    "express": "^4.17.1",
-    "express-openapi": "^9.3.0",
-    "fs-extra": "^10.0.0",
-    "fs-monkey": "^1.0.3",
-    "lodash": "^4.17.21",
-    "memfs": "^3.2.2",
-    "minimist": "^1.2.5",
-    "terraform-generator": "^5.0.2",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.2.1",
-    "ts-node-dev": "^1.1.8",
-    "tslib": "^2.3.1",
-    "unionfs": "^4.4.0",
-    "webpack": "^5.51.1"
-  },
+  "author": "German Meza <iam@germanamz.com>",
+  "license": "MIT",
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
-    "@types/archiver": "^5.1.1",
-    "@types/bluebird": "^3.5.36",
-    "@types/body-parser": "^1.19.1",
-    "@types/dependency-tree": "^8.1.1",
-    "@types/express": "^4.17.13",
-    "@types/express-openapi": "^1.9.0",
-    "@types/fs-extra": "^9.0.12",
-    "@types/lodash": "^4.14.172",
-    "@types/minimist": "^1.2.2",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-node-externals": "^2.5.2",
+    "lerna": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^13.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint": "^7.32.0",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "prettier": "^2.3.2"
   }
 }
