--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dist"
   ],
   "scripts": {
-    "postinstall": "lerna bootstrap"
+    "lint": "eslint ./packages/* --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,6 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
@@ -28,6 +27,7 @@
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "lerna": "^4.0.0",
     "prettier": "^2.3.2"
   }
 }
