--- a/packages/api-builder/package.json
+++ b/packages/api-builder/package.json
@@ -44,6 +44,7 @@
     "dependency-tree": "^8.1.1",
     "ejs": "^3.1.6",
     "enhanced-resolve": "^5.8.3",
+    "errno": "^1.0.0",
     "express": "^4.17.1",
     "express-openapi": "^9.3.0",
     "fs-extra": "^10.0.0",
