feat: registry into its own package

--- a/packages/registry/package.json
+++ b/packages/registry/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "@the-api-builder/errno",
+  "name": "@the-api-builder/registry",
   "version": "1.0.0",
-  "private": true,
+  "keywords": [],
   "author": "German Meza <iam@germanamz.com>",
-  "homepage": "https://github.com/germanamz/api-builder#readme",
   "license": "MIT",
   "main": "./dist/cjs/index.js",
   "types": "./dist/types/index.d.ts",
   "module": "./dist/es/index.js",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/germanamz/api-builder.git"
@@ -16,17 +18,17 @@
     "build:cjs": "tsc -p tsconfig.json",
     "build:es": "tsc -p tsconfig.es.json",
     "clean": "rm -rf dist",
-    "build": "yarn run clean && yarn run build:cjs && yarn run build:es",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --fix --ext .ts"
+    "build": "yarn run clean && yarn run build:cjs && yarn run build:es"
   },
   "bugs": {
     "url": "https://github.com/germanamz/api-builder/issues"
   },
+  "homepage": "https://github.com/germanamz/api-builder#readme",
+  "dependencies": {
+    "@the-api-builder/errno": "^1.0.0",
+    "tslib": "^2.3.1"
+  },
   "devDependencies": {
     "typescript": "^4.5.4"
-  },
-  "dependencies": {
-    "tslib": "^2.3.1"
   }
 }
