feat: common pipeline and utils packages

--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -37,7 +37,9 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
+    "@the-api-builder/errno": "^1.0.0",
     "@the-api-builder/errors": "^1.0.0",
+    "@the-api-builder/pipeline-common": "^1.0.0",
     "@the-api-builder/registry": "^1.0.0",
     "archiver": "^5.3.0",
     "babel-loader": "^8.2.2",
@@ -46,7 +48,6 @@
     "dependency-tree": "^8.1.1",
     "ejs": "^3.1.6",
     "enhanced-resolve": "^5.8.3",
-    "@the-api-builder/errno": "^1.0.0",
     "express": "^4.17.1",
     "express-openapi": "^9.3.0",
     "fs-extra": "^10.0.0",
