--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,43 +1,36 @@
 {
-  "name": "@the-api-builder/utils",
+  "name": "@the-api-builder/cli",
   "version": "1.0.0",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "German Meza <iam@germanamz.com>",
   "license": "MIT",
-  "main": "./dist/cjs/index.js",
-  "types": "./dist/types/index.d.ts",
-  "module": "./dist/es/index.js",
   "files": [
     "dist"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/germanamz/api-builder.git"
   },
+  "bin": {
+    "api-builder": "./dist/cjs/index.js"
+  },
   "scripts": {
     "build:cjs": "tsc -p tsconfig.json",
-    "build:es": "tsc -p tsconfig.es.json",
     "clean": "rm -rf dist",
-    "build": "yarn run clean && yarn run build:cjs && yarn run build:es"
+    "build": "yarn run clean && yarn run build:cjs"
   },
   "bugs": {
     "url": "https://github.com/germanamz/api-builder/issues"
   },
   "homepage": "https://github.com/germanamz/api-builder#readme",
   "dependencies": {
-    "@the-api-builder/errno": "^1.0.0",
-    "@the-api-builder/errors": "^1.0.0",
-    "express": "^4.17.2",
-    "fs-extra": "^10.0.0",
+    "@the-api-builder/builder": "^1.0.0",
+    "minimist": "^1.2.5",
+    "ts-node": "^10.4.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/fs-extra": "^9.0.13",
     "typescript": "^4.5.4"
   }
 }
