--- a/packages/errno/package.json
+++ b/packages/errno/package.json
@@ -5,6 +5,9 @@
   "author": "German Meza <iam@germanamz.com>",
   "homepage": "https://github.com/germanamz/api-builder#readme",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "main": "./dist/cjs/index.js",
   "types": "./dist/types/index.d.ts",
   "module": "./dist/es/index.js",
