--- a/packages/pipeline-build/package.json
+++ b/packages/pipeline-build/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@the-api-builder/pipeline-build",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "German Meza <iam@germanamz.com>",
@@ -31,15 +31,15 @@
     "@types/ejs": "^3.1.0"
   },
   "dependencies": {
-    "@the-api-builder/pipeline-common": "^1.0.0",
-    "@the-api-builder/registry": "^1.0.0",
-    "@the-api-builder/utils": "^1.0.0",
+    "@the-api-builder/pipeline-common": "^1.1.0",
+    "@the-api-builder/registry": "^1.1.0",
+    "@the-api-builder/utils": "^1.1.0",
     "ejs": "^3.1.6",
     "fs-extra": "^10.0.0",
     "terraform-generator": "^5.1.0",
     "ts-loader": "^9.2.6",
     "tslib": "^2.3.1",
-    "webpack": "^5.65.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0"
   }
 }
