feat: version to publish

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -39,5 +39,6 @@
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
     "typescript": "^4.5.4"
-  }
+  },
+  "gitHead": "c8dcf9adf9f288e9c70ba274e831f4a7d7806b43"
 }
