--- a/packages/pipeline-build/package.json
+++ b/packages/pipeline-build/package.json
@@ -41,5 +41,6 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "webpack": "^5.65.0"
-  }
+  },
+  "gitHead": "c8dcf9adf9f288e9c70ba274e831f4a7d7806b43"
 }
