--- a/packages/errno/package.json
+++ b/packages/errno/package.json
@@ -7,6 +7,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "./dist/cjs/index.js",
   "types": "./dist/types/index.d.ts",
   "module": "./dist/es/index.js",
@@ -31,5 +34,5 @@
   "dependencies": {
     "tslib": "^2.3.1"
   },
-  "gitHead": "7481ec18c4c20f2f41fa1f7cb923973f5f0a7549"
+  "gitHead": "78935e6113c3fa05777de1767b3eed031db4c16d"
 }
