--- a/packages/pipeline-build/package.json
+++ b/packages/pipeline-build/package.json
@@ -11,6 +11,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/germanamz/api-builder.git"
@@ -42,5 +45,5 @@
     "typescript": "^4.5.4",
     "webpack": "^5.65.0"
   },
-  "gitHead": "7481ec18c4c20f2f41fa1f7cb923973f5f0a7549"
+  "gitHead": "78935e6113c3fa05777de1767b3eed031db4c16d"
 }
