--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "postinstall": "lerna bootstrap",
+    "prepublish": "lerna run build",
     "lint": "eslint ./packages/* --ext .ts"
   },
   "repository": {
