--- a/packages/errno/package.json
+++ b/packages/errno/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://github.com/germanamz/api-builder#readme",
   "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "LICENSE.txt"
   ],
   "publishConfig": {
     "access": "public"
