--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,7 +9,8 @@
   "types": "./dist/types/index.d.ts",
   "module": "./dist/es/index.js",
   "files": [
-    "dist"
+    "dist",
+    "LICENSE.txt"
   ],
   "publishConfig": {
     "access": "public"
