--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "postinstall": "lerna bootstrap",
-    "prepublish": "lerna run build",
+    "prepublishOnly": "lerna run build",
     "lint": "eslint ./packages/* --ext .ts"
   },
   "repository": {
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "lerna": "^4.0.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "ts-node": "^10.4.0"
   }
 }
