--- a/packages/server-ws/package.json
+++ b/packages/server-ws/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@the-api-builder/pipeline-dev",
-  "version": "0.1.5",
-  "description": "The api builder dev pipeline",
+  "name": "@the-api-builder/server-ws",
+  "version": "1.0.0",
   "keywords": [],
+  "description": "The api builder websocket server",
   "author": "German Meza <iam@germanamz.com>",
   "license": "MIT",
   "main": "./dist/cjs/index.js",
@@ -12,9 +12,6 @@
     "dist",
     "LICENSE.txt"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/germanamz/api-builder.git"
@@ -29,18 +26,14 @@
     "url": "https://github.com/germanamz/api-builder/issues"
   },
   "homepage": "https://github.com/germanamz/api-builder#readme",
-  "dependencies": {
-    "@the-api-builder/pipeline-common": "^0.1.3",
-    "@the-api-builder/registry": "^0.1.3",
-    "@the-api-builder/server-ws": "^1.0.0",
-    "@the-api-builder/utils": "^0.1.2",
-    "body-parser": "^1.19.1",
-    "express": "^4.17.2",
-    "express-openapi": "^10.0.0",
-    "tslib": "^2.3.1"
-  },
   "devDependencies": {
+    "@types/node": "^17.0.8",
+    "@types/ws": "^8.2.2",
     "typescript": "^4.5.4"
   },
-  "gitHead": "78935e6113c3fa05777de1767b3eed031db4c16d"
+  "dependencies": {
+    "@the-api-builder/utils": "^0.1.2",
+    "tslib": "^2.3.1",
+    "ws": "^8.4.0"
+  }
 }
