--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -43,6 +43,7 @@
     "@the-api-builder/pipeline-common": "^0.2.0",
     "@the-api-builder/pipeline-dev": "^0.2.0",
     "@the-api-builder/registry": "^0.1.3",
+    "ts-node": "^10.4.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
