--- a/packages/pipeline-build/package.json
+++ b/packages/pipeline-build/package.json
@@ -32,7 +32,8 @@
   },
   "homepage": "https://github.com/germanamz/api-builder#readme",
   "devDependencies": {
-    "@types/ejs": "^3.1.0"
+    "@types/ejs": "^3.1.0",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "@the-api-builder/pipeline-common": "^0.2.0",
