--- a/packages/server-rest/package.json
+++ b/packages/server-rest/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@the-api-builder/pipeline-common",
-  "version": "0.2.0",
-  "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
+  "name": "@the-api-builder/server-rest",
+  "version": "0.0.0",
   "keywords": [],
   "author": "German Meza <iam@germanamz.com>",
   "license": "MIT",
@@ -30,18 +29,15 @@
   },
   "homepage": "https://github.com/germanamz/api-builder#readme",
   "dependencies": {
-    "@the-api-builder/errno": "^0.1.2",
-    "@the-api-builder/errors": "^0.1.2",
-    "@the-api-builder/registry": "^0.1.3",
     "@the-api-builder/utils": "^0.2.0",
-    "fs-extra": "^10.0.0",
-    "memfs": "^3.4.0",
-    "ts-node": "^10.4.0",
-    "tslib": "^2.3.1",
-    "unionfs": "^4.4.0"
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
+    "express-openapi": "^10.1.0",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.9",
     "typescript": "^4.5.4"
-  },
-  "gitHead": "0a348e1f25d1613e9f06e8f7a19ada88fa2f63ad"
+  }
 }
