--- a/packages/pipeline-build-rest/package.json
+++ b/packages/pipeline-build-rest/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@the-api-builder/registry",
-  "version": "0.1.3",
+  "name": "@the-api-builder/pipeline-build-rest",
+  "version": "0.0.0",
   "keywords": [],
   "author": "German Meza <iam@germanamz.com>",
   "license": "MIT",
@@ -19,8 +19,10 @@
     "url": "git+https://github.com/germanamz/api-builder.git"
   },
   "scripts": {
-    "build:cjs": "tsc -p tsconfig.json",
-    "build:es": "tsc -p tsconfig.es.json",
+    "cp:templates:cjs": "cp -r src/templates dist/cjs/templates",
+    "cp:templates:es": "cp -r src/templates dist/es/templates",
+    "build:cjs": "tsc -p tsconfig.json && yarn run cp:templates:cjs",
+    "build:es": "tsc -p tsconfig.es.json && yarn run cp:templates:es",
     "clean": "rm -rf dist",
     "build": "yarn run clean && yarn run build:cjs && yarn run build:es"
   },
@@ -28,14 +30,17 @@
     "url": "https://github.com/germanamz/api-builder/issues"
   },
   "homepage": "https://github.com/germanamz/api-builder#readme",
-  "dependencies": {
-    "@the-api-builder/errno": "^0.1.2",
-    "lodash": "^4.17.21",
-    "tslib": "^2.3.1"
-  },
   "devDependencies": {
-    "@types/lodash": "^4.14.178",
     "typescript": "^4.5.4"
   },
-  "gitHead": "78935e6113c3fa05777de1767b3eed031db4c16d"
+  "dependencies": {
+    "@the-api-builder/pipeline-common": "^0.2.0",
+    "@the-api-builder/registry": "^0.1.3",
+    "@the-api-builder/tf-rest": "^0.0.0",
+    "@the-api-builder/utils": "^0.2.0",
+    "ejs": "^3.1.6",
+    "fs-extra": "^10.0.0",
+    "tslib": "^2.3.1",
+    "webpack": "^5.67.0"
+  }
 }
