--- a/packages/pipeline-build/package.json
+++ b/packages/pipeline-build/package.json
@@ -20,10 +20,8 @@
     "url": "git+https://github.com/germanamz/api-builder.git"
   },
   "scripts": {
-    "cp:templates:cjs": "cp -r src/templates dist/cjs/templates",
-    "cp:templates:es": "cp -r src/templates dist/es/templates",
-    "build:cjs": "tsc -p tsconfig.json && yarn run cp:templates:cjs",
-    "build:es": "tsc -p tsconfig.es.json && yarn run cp:templates:es",
+    "build:cjs": "tsc -p tsconfig.json",
+    "build:es": "tsc -p tsconfig.es.json",
     "clean": "rm -rf dist",
     "build": "yarn run clean && yarn run build:cjs && yarn run build:es"
   },
@@ -36,6 +34,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@the-api-builder/pipeline-build-rest": "^0.0.0",
     "@the-api-builder/pipeline-common": "^0.2.0",
     "@the-api-builder/registry": "^0.1.3",
     "@the-api-builder/utils": "^0.2.0",
