--- a/packages/utils/tsconfig.es.json
+++ b/packages/utils/tsconfig.es.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "declaration": false,
     "declarationDir": null,
-    "lib": ["dom", "es5", "es2015.promise", "es2015.collection", "es2015.iterable", "es2015.symbol.wellknown"],
+    "lib": ["dom", "dom.iterable", "es5", "es2015.promise", "es2015.collection", "es2015.iterable", "es2015.symbol.wellknown"],
     "outDir": "dist/es"
   }
 }
