--- a/packages/server-rest/package.json
+++ b/packages/server-rest/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/germanamz/api-builder#readme",
   "dependencies": {
     "@the-api-builder/utils": "^0.12.0",
+    "body-parser": "^1.20.0",
     "express": "^4.17.2",
     "express-openapi": "^10.1.0",
     "tslib": "^2.3.1"
